# fitness_tracker_program

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
src/: main.py
src/api/: dependencies.py
src/api/v1/: goals.py  users.py  workouts.py
src/core/: cache.py  config.py  database.py  logging.py  security.py
src/models/: models.py
src/schemas/: goal.py  user.py  workout.py
src/services/: analytics.py  goal_service.py  user_service.py  workout_service.py
tests/: conftest.py
